Groomed serviceCaseQueueFiltered.html

--- a/force-app/main/default/lwc/serviceCaseQueueFiltered/serviceCaseQueueFiltered.html
+++ b/force-app/main/default/lwc/serviceCaseQueueFiltered/serviceCaseQueueFiltered.html
@@ -55,7 +55,7 @@
                 </div>
             </div>
             <template lwc:if={isLoaded}>
-                <ul class="slds-box slds-m-top_medium slds-p-horizontal_medium">
+                <ul class="slds-box slds-p-horizontal_medium">
                     <template for:each={cases} for:item="item">
                         <li key={item.Id}>
                             <div class="slds-grid">
